<resources>
    <string name="app_name">medipal</string>

    <string name="save">Save</string>
    <string name="title_activity_manage_ice">Manage ICE Contacts</string>
    <string name="title_activity_add_ice">Add ICE Contacts</string>

    <string name="btn_remove">Remove</string>
    <string name="btn_edit">Edit</string>
    <string name="placeholder">Placeholder</string>
    <string name="delete">Delete</string>

    <string-array name="iceType_array">
        <item>Emergency Contact</item>
        <item>Home Physician</item>
        <item>Next of Kin</item>
    </string-array>
    <string name="title_activity_manage_reminder">Manage Reminders</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_main">Personal MediPal</string>
    <string name="ice_empty">No ICE Contact.</string>
    <string name="reminder_empty">No Reminder.</string>

    <string-array name="conditiontype">
        <item>C</item>
        <item>D</item>
    </string-array>
    <string name="title_activity_add_measurement_tab">activity_add_measurement_tab</string>
    <string name="action_settings">Settings</string>

    <string name="appointment_empty">No Medical Appointment.</string>
    <string name="addReminder">Set Reminder</string>
    <string name="consumption_empty">No Medicine Consumption.</string>

    <string name="manage_category" translatable="false">Manage Category</string>
    <string name="title_activity_add_category">Add Category</string>
    <string name="category">Category</string>
    <string name="category_code">Category Code</string>
    <string name="category_description">Category Description</string>
    <string name="set_reminder">Set Reminder</string>

    <string name="manage_medicine">Manage Medicine</string>
    <string name="medicine_empty">No Medicine List.</string>

    <string name="reminder_notification_title_template">Reminder</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
