<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_reminder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="iss.nus.medipal.activity.EditCategoryActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:text="Category"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <EditText
                android:id="@+id/et_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/category"
                android:inputType="number" />


            <TextView
                android:id="@+id/tv_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:text="Code"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:hint="@string/category_code"
                android:inputType="number"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tv_categoryDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:text="Category Description"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <EditText
                android:id="@+id/et_categoryDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_categoryDescription"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/category_description"
                android:inputType="number"
                tools:ignore="ObsoleteLayoutParam" />

            <TextView
                android:id="@+id/tv_reminderID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:text="@string/set_reminder"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/et_isReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="number"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                tools:ignore="LabelFor" />


            <Button
                android:id="@+id/btn_editCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_isReminder"
                android:layout_alignParentBottom="true"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
